docs/build/iota-sdk/2.0/docs/how-tos/native-tokens/create.mdx
---
title: Create Native Tokens
sidebar_label: Create
description: 'How to create native tokens'
image: /img/logo/iota_mark_light.png
tags:
  - how to
  - create a native token
  - nodejs
  - python
  - java
  - rust
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import TipFaucet from '../../_admonitions/_tip-faucet.md';

The stardust update allows you to create your own [native tokens](/introduction/stardust/explanations/what_is_stardust/tokenization#native-tokens)
Native tokens are minted by a so-called Foundry. The Foundry allows you to specify a max supply once and change the circulating supply.

You can also specify some custom metadata in the foundry output or follow a standard like [IRC30](/tips/tips/TIP-0030).
To create a Foundry you need an Alias Output which owns it. This Alias Output only needs to be generated once and can own multiple foundries.

<TipFaucet />

## Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

1. Instantiate a [`Wallet`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Check the wallet's balance for an [`Account Output`](../account-output/create.mdx)
   it can use to create the [native tokens](/tips/tips/TIP-0018#native-tokens-in-outputs).
   If the account doesn't have any, it will create one.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/create.rs#L44-L60
```

</div>

3. Create the `Irc30Metadata` and add a description by chaining a call to `with_description`.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/create.rs#L62-L63
```

</div>

4. Define the [`CreateNativeTokenParams`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/struct.CreateNativeTokenParams.html).

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/create.rs#L67-L72
```

</div>

5. Create the native token using the [`Wallet.create_native_token()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.create_native_token)
   function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/create.rs#L74
```

</div>

6. Await for the transaction to be accepted by the network by calling the [`Wallet.wait_for_transaction_acceptance()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.wait_for_transaction_acceptance) function.


<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/create.rs#L77-L79
```

</div>
</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Wallet) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Check the wallet's balance for an [`Account Output`](../account-output/create.mdx)
   it can use to create the [native tokens](/tips/tips/TIP-0018#native-tokens-in-outputs).
   If the account doesn't have any, it will create one.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/create.ts#L34-L51
```

</div>

3. Define [`Irc30Metadata`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Irc30Metadata/) and add a description by chaining a call to [`Irc30Metadata.withDescription()`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Irc30Metadata/#withdescription).

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/create.ts#L55-L59
```

</div>

4. Define the [`CreateNativeTokenParams`](../../references/nodejs/interfaces/CreateNativeTokenParams.md).

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/create.ts#L62-L66
```

</div>

5. Prepare the transaction that will create the native token using the
   [`Account.prepareCreateNativeToken()`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Wallet/#preparecreatenativetoken)
   function and send the prepared transaction using the [`Wallet.send()`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Wallet/#send)
   function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/create.ts#L68-L69
```

</div>

5. Await for the [`Transaction`](../../references/nodejs/classes/Transaction.md) to get confirmed by calling the
[`Wallet.waitForTransactionAcceptance()`](../../references/nodejs/classes/Wallet.md#waitfortransactionacceptance)
function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/create.ts#L73
```

</div>
</TabItem>
<TabItem value="python" label="Python">

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/wallet/) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Check the wallet's balance for an [`Account Output`](../account-output/create.mdx)
   it can use to create the [native tokens](/tips/tips/TIP-0018#native-tokens-in-outputs).
   If the account doesn't have any, it will create one.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/create.py#L23-L34
```

</div>

3. Define the [`Irc30Metadata`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/types/irc_30/).

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/create.py#L38-L40
```

</div>

4. Define the [`CreateNativeTokenParams`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/types/send_params/#createnativetokenparams-objects).

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/create.py#L42-L46
```

</div>

4. Prepare the transaction that will create the native token using the
   [`Wallet.prepare_create_native_token()`](../../references/python/iota_sdk/wallet/wallet.md#prepare_create_native_token)
   function and send the prepared transaction using the [`Wallet.send()`](../../references/python/iota_sdk/wallet/wallet.md#send)
   function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/create.py#L48-L49
```

</div>

5. Await for the transaction to get accepted by calling the [`Wallet.wait_for_transaction_acceptance()`](../../references/python/iota_sdk/wallet/wallet.md#wait_for_transaction_acceptance)
function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/create.py#L52-L53
```

</div>

</TabItem>
</Tabs>

### Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/create.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/create.ts
```

</TabItem>
<TabItem value="python" label="Python">

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/create.py
```

</TabItem>
</Tabs>

### Expected Output

```plaintext
Transaction sent: 0x3e7fe86a2b01a7006fe037249be51852d298d32df69507140d3b41c1a6d7fb90
Block included: https://explorer.shimmer.network/testnet/block/0xca4f8150014bc548214be6b02bed3b7d43041adef8838965815a367f73c7272d
Account synced
Preparing transaction to create native token...
Transaction sent: 0xcfc5ffae0c7be8cfb7c334d6f6bb39a2ddff612c9a9048c88e3d9158f7cc4832
Block included: https://explorer.shimmer.network/testnet/block/0x558c0dcede60609bbb641e9f1d9a7802b48a3c3d5827328a054385140d447436
Created token: 0x089dc1b964591b15819ef1912fab48c001fed4558b37766dfa5daa512495d5b25a0100000000
Account synced
```
